--- a/users/list/templates/list/user_list.html
+++ b/users/list/templates/list/user_list.html
@@ -1,5 +1,21 @@
 {% extends 'list/base.html' %}
 {% block content %}
-    elo
-
+    <table>
+        <thead>
+            <tr>
+                <th>Username</th>
+                <th>Birthday</th>
+                <th>Random number</th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for user in users %}
+            <tr>
+                <td>{{ user.username }}</td>
+                <td>{{ user.birthday}}</td>
+                <td>{{ user.random_number}}</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
