--- a/users/list/templates/list/user_list.html
+++ b/users/list/templates/list/user_list.html
@@ -1,4 +1,5 @@
 {% extends 'list/base.html' %}
+{% load custom_tags %}
 {% block content %}
     <table>
         <thead>
@@ -6,14 +7,16 @@
                 <th>Username</th>
                 <th>Birthday</th>
                 <th>Random number</th>
+                <th>Status</th>
             </tr>
         </thead>
         <tbody>
         {% for user in users %}
             <tr>
                 <td>{{ user.username }}</td>
-                <td>{{ user.birthday}}</td>
-                <td>{{ user.random_number}}</td>
+                <td>{{ user.birthday }}</td>
+                <td>{{ user.random_number }}</td>
+                <td>{% status user %}</td>
             </tr>
         {% endfor %}
         </tbody>
