--- a/users/list/templates/list/user_list.html
+++ b/users/list/templates/list/user_list.html
@@ -7,6 +7,7 @@
                 <th>Username</th>
                 <th>Birthday</th>
                 <th>Random number</th>
+                <th>BizzFuzz</th>
                 <th>Status</th>
             </tr>
         </thead>
@@ -16,6 +17,7 @@
                 <td>{{ user.username }}</td>
                 <td>{{ user.birthday }}</td>
                 <td>{{ user.random_number }}</td>
+                <td>{% bizz_fuzz user %}</td>
                 <td>{% status user %}</td>
             </tr>
         {% endfor %}
