add update view for user, add button for update in detailed view

--- a/users/list/templates/list/user_confirm_delete.html
+++ b/users/list/templates/list/user_confirm_delete.html
@@ -2,8 +2,8 @@
 {%  block content %}
 
 <h1>User Delete</h1>
-<form method="post">{% csrf_token %}
-    Are you sure you want to delete "{{ object }}" ?
-    <input type="submit" value="Submit" />
-</form>
+    <form method="post">{% csrf_token %}
+        Are you sure you want to delete "{{ user }}" ?
+        <input type="submit" value="Submit" />
+    </form>
 {% endblock %}
