--- a/users/list/templates/list/user_list.html
+++ b/users/list/templates/list/user_list.html
@@ -6,9 +6,9 @@
             <tr>
                 <th>Username</th>
                 <th>Birthday</th>
+                <th>Status</th>
                 <th>Random number</th>
                 <th>BizzFuzz</th>
-                <th>Status</th>
                 <th>Delete</th>
                 <th>Update</th>
             </tr>
@@ -16,7 +16,7 @@
         <tbody>
         {% for user in users %}
             <tr>
-                <td>{{ user.username }}</td>
+                <td><a href="{% url 'user-view' pk=user.id %}">{{ user.username }}</a></td>
                 <td>{{ user.birthday }}</td>
                 <td>{% status user %}</td>
                 <td>{{ user.random_number }}</td>
