add create view

--- a/users/list/templates/list/user_list.html
+++ b/users/list/templates/list/user_list.html
@@ -17,7 +17,11 @@
         {% for user in users %}
             <tr>
                 <td><a href="{% url 'user-view' pk=user.id %}">{{ user.username }}</a></td>
+                {% if user.birthday %}
                 <td>{{ user.birthday }}</td>
+                {% else %}
+                    <td>No birthdate provided</td>
+                {% endif %}
                 <td>{% status user.birthday %}</td>
                 <td>{{ user.random_number }}</td>
                 <td>{% bizz_fuzz user.random_number %}</td>
@@ -27,4 +31,5 @@
         {% endfor %}
         </tbody>
     </table>
+    <a role="button" href="{% url 'user-new' %}">New user</a>
 {% endblock %}
